...
    <!-- Text -->
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_save">Save</string>
    <string name="text_create_account">Don\'t have an account?  <font color='#7885FF'>Sign up</font></string>
    <string name="text_login_account">Already have an account?  <font color='#7885FF'>Login</font></string>
    <string name="text_registration">Create account</string>
    <string name="text_register">Register</string>
    <string name="text_welcome">Welcome to MNREGA!</string>
    <string name="text_welcome_back">Welcome back</string>
    <string name="text_no_connectivity">No Internet!</string>
    <string name="text_connectivity">Online back</string>
    <string name="text_empty_state_title">No Data found</string>
...
    <string name="text_visit">Visit</string>
    <string name="text_repo_url"><u>https://github.com/nitish9t7/mnrega-app</u></string>
    <string name="text_ok">OK</string>

    <!-- Hint -->
    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_field_title">Title</string>
    <string name="hint_field_attendance"></string>

    <!-- Messages -->
    <string name="message_field_blank">Should not blank</string>
    <string name="message_field_username_invalid">Should be of min 4 and max 30 chars</string>
...
